Fix error in create log.